--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div
-      class="slide"
+      class="slide active"
       style="background-image: url('https://images.unsplash.com/photo-1583121274602-3e2820c69888?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');"
   >
     <h3>Ferrari</h3>
@@ -47,5 +47,6 @@
     <h3>Tesla</h3>
   </div>
 </div>
+<script src="app.js"></script>
 </body>
 </html>
